# FEM-Project

./: .gitmodules  1.txt  2.txt  3.txt  CMakeLists.txt  FEM.sln  FEM.vcxproj  FEM.vcxproj.filters  FEM_Net_1.cpp  FEM_Net_1.h  File.cpp  File.h  Includes.h  JacobiMethod.cpp  JacobiMethod.h  README.md  Source.cpp  main.cpp
Google_Tests/: CMakeLists.txt  OutputTest.cpp
Includes/: ElemUniv.h  Element.h  GlobalData.h  GlobalSystemEquation.h  Grid.h  Includes.h  IntegrationPoints.h  Jacobian.h  Node.h
Source/: ElemUniv.cpp  Element.cpp  GlobalData.cpp  GlobalSystemEquation.cpp  Grid.cpp  IntegrationPoints.cpp  Jacobian.cpp  Node.cpp
lib/file-handler/: CMakeLists.txt  FileHandler.cpp  FileHandler.h
lib/time-measurement/: CMakeLists.txt  Timer.cpp  Timer.h  timer.cpp  timer.h
